# geoagency

./: README.md  pyproject.toml
geoagency/: llm_manager.py  server.py
geoagency/agents/: agent_based_approach.py  agent_factory.py  deterministic_approach.py  memory.py  smolagent_base.py
geoagency/agents/retriever/: retriever.py  retriever_test.py
geoagency/agents/tools/: geo_tools.py  osm_tools.py  retrieval_tools.py  tools.py
geoagency/config/: config.json  config.py  repo_config.json
geoagency/demo_client/: chatbot_demo.py
geoagency/retriever/: retriever.py  retriever_test.py
